--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <header class="header">
        <nav class="header-nav">
-           <a class="header-logo" href="">WebStudio</a>
+           <a class="header-logo link" href="">WebStudio</a>
            <ul class="list menu-list">
                <li><a class="menu-link link" href="">Студия</a></li>
                <li><a class="menu-link link" href="">Портфолио</a></li>
                <li><a class="menu-link link" href="">Контакты</a></li>
            </ul>
        </nav>
-       <ul class="list-contact">
+       <ul class="list-contact list">
            <li><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
            <li><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
        </ul>
@@ -31,8 +31,8 @@
           <button class="hero-btn btn" type="button">Заказать услугу</button>
       </section>
       <section class="advantage">
-          <h2 class="advantage-title">Наше преимущество</h2>
-          <ul class="advantage-list">
+          <h2 class="visually-hidden">Наше преимущество</h2>
+          <ul class="advantage-list list">
               <li class="advantage-item">
                   <h3 class="section-title">Внимание к деталям</h3>
                   <p class="advantage-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -53,7 +53,7 @@
       </section>
       <section class="about">
           <h2 class="about-title">Чем мы занимаемся</h2>
-          <ul class="about-list">
+          <ul class="about-list list">
               <li class="about-item"><img src="./img/box1.jpg" alt="изображение1" width="370" ></li>
               <li class="about-item"><img src="./img/box2.jpg" alt="изображение2" width="370" ></li>
               <li class="about-item"><img src="./img/box3.jpg" alt="изображение3" width="370" ></li>
@@ -61,7 +61,7 @@
       </section>
       <section class="team">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="team-list">
+          <ul class="team-list list">
               <li class="team-item">
                   <img src="./img/img.jpg" alt="Игорь Демьяненко" width="270" >
                   <h3 class="team-second-title">Игорь Демьяненко</h3>
@@ -86,12 +86,12 @@
       </section>
   </main>
   <footer class="footer">
-    <a class="header-logo" href="">WebStudio</a>
+    <a class="header-logo link" href="">WebStudio</a>
     <address class="addres">
-        <ul class="addres-lisr">
-            <li class="addres-item"><a href="https://goo.gl/maps/9oyzG3mhycgQsMQ47" target="_blank" rel="noopener noindex nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="addres-item"><a href="mailto:info@example.com">info@example.com</a></li>
-            <li class="addres-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <ul class="addres-lisr list">
+            <li><a class="addres-item link" href="https://goo.gl/maps/9oyzG3mhycgQsMQ47" target="_blank" rel="noopener noindex nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a class="addres-item link" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="addres-item link" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
   </footer>
