--- a/index.html
+++ b/index.html
@@ -4,90 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">">
     <title>WebStudio</title>
 </head>
 <body>
-  <header>
-       <nav>
-           <a href="">WebStudio</a>
-           <ul>
-               <li><a href="">Студия</a></li>
-               <li><a href="">Портфолио</a></li>
-               <li><a href="">Контакты</a></li>
+  <header class="header">
+       <nav class="header-nav">
+           <a class="header-logo" href="">WebStudio</a>
+           <ul class="list menu-list">
+               <li><a class="menu-link link" href="">Студия</a></li>
+               <li><a class="menu-link link" href="">Портфолио</a></li>
+               <li><a class="menu-link link" href="">Контакты</a></li>
            </ul>
        </nav>
-       <ul>
-           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+       <ul class="list-contact">
+           <li><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+           <li><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
        </ul>
   </header>
   <main>
-      <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
+      <section class="hero">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn btn" type="button">Заказать услугу</button>
       </section>
-      <section>
-          <h2>Наше преимущество</h2>
-          <ul>
-              <li>
-                  <h3>Внимание к деталям</h3>
-                  <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+      <section class="advantage">
+          <h2 class="advantage-title">Наше преимущество</h2>
+          <ul class="advantage-list">
+              <li class="advantage-item">
+                  <h3 class="section-title">Внимание к деталям</h3>
+                  <p class="advantage-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
               </li>
-              <li>
-                  <h3>Пунктуальность</h3>
-                  <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+              <li class="advantage-item">
+                  <h3 class="section-title">Пунктуальность</h3>
+                  <p class="advantage-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
               </li>
-              <li>
-                  <h3>Планирование</h3>
-                  <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+              <li class="advantage-item">
+                  <h3 class="section-title">Планирование</h3>
+                  <p class="advantage-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
               </li>
-              <li>
-                  <h3>Современные технологии</h3>
-                  <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+              <li class="advantage-item">
+                  <h3 class="section-title">Современные технологии</h3>
+                  <p class="advantage-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
               </li>
           </ul>
       </section>
-      <section>
-          <h2>Чем мы занимаемся</h2>
-          <ul>
-              <li><img src="./img/box1.jpg" alt="изображение1" width="370" ></li>
-              <li><img src="./img/box2.jpg" alt="изображение2" width="370" ></li>
-              <li><img src="./img/box3.jpg" alt="изображение3" width="370" ></li>
+      <section class="about">
+          <h2 class="about-title">Чем мы занимаемся</h2>
+          <ul class="about-list">
+              <li class="about-item"><img src="./img/box1.jpg" alt="изображение1" width="370" ></li>
+              <li class="about-item"><img src="./img/box2.jpg" alt="изображение2" width="370" ></li>
+              <li class="about-item"><img src="./img/box3.jpg" alt="изображение3" width="370" ></li>
           </ul>
       </section>
-      <section>
-          <h2>Наша команда</h2>
-          <ul>
-              <li>
+      <section class="team">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list">
+              <li class="team-item">
                   <img src="./img/img.jpg" alt="Игорь Демьяненко" width="270" >
-                  <h3>Игорь Демьяненко</h3>
-                  <p>Product Designer</p>
+                  <h3 class="team-second-title">Игорь Демьяненко</h3>
+                  <p class="team-text">Product Designer</p>
               </li>
-              <li>
+              <li class="team-item">
                   <img src="./img/img1.jpg" alt="Ольга Репина" width="270" >
-                  <h3>Ольга Репина</h3>
-                  <p>Frontend Developer</p>
+                  <h3 class="team-second-title">Ольга Репина</h3>
+                  <p class="team-text">Frontend Developer</p>
               </li>
               <li>
                   <img src="./img/img2.jpg" alt="Николай Тарасов" width="270" >
-                  <h3>Николай Тарасов</h3>
-                  <p>Marketing</p>
+                  <h3 class="team-second-title">Николай Тарасов</h3>
+                  <p class="team-text">Marketing</p>
               </li>
-              <li>
+              <li class="team-item">
                   <img src="./img/img3.jpg" alt="Михаил Ермаков" width="270" >
-                  <h3>Михаил Ермаков</h3>
-                  <p>UI Designer</p>
+                  <h3 class="team-second-title">Михаил Ермаков</h3>
+                  <p class="team-text">UI Designer</p>
               </li>
           </ul>
       </section>
   </main>
-  <footer>
-    <a href="">WebStudio</a>
-    <address>
-        <ul>
-            <li><a href="https://goo.gl/maps/9oyzG3mhycgQsMQ47" target="_blank" rel="noopener noindex nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+  <footer class="footer">
+    <a class="header-logo" href="">WebStudio</a>
+    <address class="addres">
+        <ul class="addres-lisr">
+            <li class="addres-item"><a href="https://goo.gl/maps/9oyzG3mhycgQsMQ47" target="_blank" rel="noopener noindex nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="addres-item"><a href="mailto:info@example.com">info@example.com</a></li>
+            <li class="addres-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
   </footer>
