--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <header class="header">
        <nav class="header-nav">
-           <a class="header-logo link" href="">WebStudio</a>
+           <a class="header-logo link" href="">Web<span class="top-logo">Studio</span></a>
            <ul class="list menu-list">
-               <li><a class="menu-link link" href="">Студия</a></li>
-               <li><a class="menu-link link" href="">Портфолио</a></li>
+               <li><a class="menu-link link current" href="">Студия</a></li>
+               <li><a class="menu-link link" href="./portfolio.html">Портфолио</a></li>
                <li><a class="menu-link link" href="">Контакты</a></li>
            </ul>
        </nav>
@@ -27,7 +27,7 @@
   </header>
   <main>
       <section class="hero">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
           <button class="hero-btn btn" type="button">Заказать услугу</button>
       </section>
       <section class="advantage">
@@ -86,12 +86,12 @@
       </section>
   </main>
   <footer class="footer">
-    <a class="header-logo link" href="">WebStudio</a>
+    <a class="header-logo link" href="">Web<span class="footer-logo">Studio</span></a>
     <address class="addres">
         <ul class="addres-lisr list">
             <li><a class="addres-item link" href="https://goo.gl/maps/9oyzG3mhycgQsMQ47" target="_blank" rel="noopener noindex nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a class="addres-item link" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="addres-item link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li><a class="addres-item link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="addres-item link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
   </footer>
