--- a/portfolio.html
+++ b/portfolio.html
@@ -37,56 +37,56 @@
             </ul>
             <ul class="exemples-list list">
                 <li class="exemple-item">
-                    <a href="">
+                    <a class="link" href="">
                         <img src="./img/portfolio/img1p.jpg" alt="example1">
                     <h2 class="exemple-title">Технокряк</h2>
                     <p class="exemple-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href=""><img src="./img/portfolio/img2p.jpg" alt="example2">
+                    <a class="link" href=""><img src="./img/portfolio/img2p.jpg" alt="example2">
                         <h2 class="exemple-title">Постер New Orlean vs Golden Star</h2>
                         <p class="exemple-text">Дизайн</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href=""><img src="./img/portfolio/img3p.jpg" alt="example3">
+                    <a class="link" href=""><img src="./img/portfolio/img3p.jpg" alt="example3">
                         <h2 class="exemple-title">Ресторан Seafood</h2>
                         <p class="exemple-text">Приложение</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href=""><img src="./img/portfolio/img4p.jpg" alt="example4">
+                    <a class="link" href=""><img src="./img/portfolio/img4p.jpg" alt="example4">
                         <h2 class="exemple-title">Проект Prime</h2>
                         <p class="exemple-text">Маркетинг</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href=""><img src="./img/portfolio/img5p.jpg" alt="example5">
+                    <a class="link" href=""><img src="./img/portfolio/img5p.jpg" alt="example5">
                         <h2 class="exemple-title">Проект Boxes</h2>
                         <p class="exemple-text">Приложение</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href=""><img src="./img/portfolio/img6p.jpg" alt="example6">
+                    <a class="link" href=""><img src="./img/portfolio/img6p.jpg" alt="example6">
                         <h2 class="exemple-title">Inspiration has no Borders</h2>
                         <p class="exemple-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href="">  <img src="./img/portfolio/img7p.jpg" alt="example7">
+                    <a class="link" href="">  <img src="./img/portfolio/img7p.jpg" alt="example7">
                         <h2 class="exemple-title">Издание Limited Edition</h2>
                         <p class="exemple-text">Дизайн</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href=""><img src="./img/portfolio/img8p.jpg" alt="example8">
+                    <a class="link" href=""><img src="./img/portfolio/img8p.jpg" alt="example8">
                         <h2 class="exemple-title">Проект LAB</h2>
                         <p class="exemple-text">Маркетинг</p>
                     </a>
                 </li>
                 <li class="exemple-item">
-                    <a href=""><img src="./img/portfolio/img9p.jpg" alt="example9">
+                    <a class="link" href=""><img src="./img/portfolio/img9p.jpg" alt="example9">
                         <h2 class="exemple-title">Growing Business</h2>
                         <p class="exemple-text">Приложение</p>
                     </a>
